Fix #94 Cover images set to align full should fill content width

--- a/src/scss/components/_components.scss
+++ b/src/scss/components/_components.scss
@@ -825,7 +825,6 @@ input[type="number"] {
 	min-height: 430px;
 	overflow: hidden;
 	position: relative;
-	width: 100%;
 }
 
 .wp-block-cover__inner-container {
